Worked on adding stubs for places.

--- a/Source/SpaceQuestClone-Private.html
+++ b/Source/SpaceQuestClone-Private.html
@@ -2,7 +2,12 @@
 
 <body>
 
-	<h3>Stub Game</h3>
+	<h3>Space Quest Clone</h3>
+
+	<p>
+		A text-only clone of the classic adventure game Space Quest,
+		intend	ed as a test of the This Could Be Better Text Adventure Engine.
+	</p>
 
 	<div id="divUi">
 		<textarea
