--- a/Source/SpaceQuestClone-Private.html
+++ b/Source/SpaceQuestClone-Private.html
@@ -2,10 +2,10 @@
 
 <body>
 
-	<h3>Space Quest Clone</h3>
+	<h3>Space Adventure Game Clone</h3>
 
 	<p>
-		A text-only clone of the classic adventure game Space Quest,
+		A text-only clone of a classic DOS-era adventure game,
 		intended as a test of the This Could Be Better Text Adventure Engine.
 	</p>
 
