--- a/Source/SpaceQuestClone-Private.html
+++ b/Source/SpaceQuestClone-Private.html
@@ -42,6 +42,8 @@
 
 <script type="text/javascript" src="Game/Game.js"></script>
 
+<script type="text/javascript" src="Tests.js"></script>
+
 <script type="text/javascript">
 
 	var tea = ThisCouldBeBetter.TextAdventureEngine;
