More work on the first region.

--- a/Source/SpaceQuestClone-Private.html
+++ b/Source/SpaceQuestClone-Private.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="Engine/Source/Emplacement.js"></script>
 <script type="text/javascript" src="Engine/Source/InputTracker.js"></script>
 <script type="text/javascript" src="Engine/Source/Item.js"></script>
+<script type="text/javascript" src="Engine/Source/MessageHelper.js"></script>
 <script type="text/javascript" src="Engine/Source/MessageQueue.js"></script>
 <script type="text/javascript" src="Engine/Source/Place.js"></script>
 <script type="text/javascript" src="Engine/Source/Portal.js"></script>
