Added regions, and an script that triggers every turn in the first region.

--- a/Source/SpaceQuestClone-Private.html
+++ b/Source/SpaceQuestClone-Private.html
@@ -28,6 +28,7 @@
 <script type="text/javascript" src="Engine/Source/MessageQueue.js"></script>
 <script type="text/javascript" src="Engine/Source/Place.js"></script>
 <script type="text/javascript" src="Engine/Source/Portal.js"></script>
+<script type="text/javascript" src="Engine/Source/Region.js"></script>
 <script type="text/javascript" src="Engine/Source/State.js"></script>
 <script type="text/javascript" src="Engine/Source/StateGroup.js"></script>
 <script type="text/javascript" src="Engine/Source/SaveState.js"></script>
