--- a/Source/SpaceAdventureTextGame.html
+++ b/Source/SpaceAdventureTextGame.html
@@ -2,7 +2,7 @@
 
 <body>
 
-	<h3>Space Adventure Game Clone</h3>
+	<h3>Space Adventure Text Game</h3>
 
 	<p>
 		A text-only clone of a classic DOS-era adventure game,
