Updated for changing Command.texts to .textSource.

--- a/Source/SpaceAdventureTextGame.html
+++ b/Source/SpaceAdventureTextGame.html
@@ -37,6 +37,7 @@
 <script type="text/javascript" src="Engine/Source/Script.js"></script>
 <script type="text/javascript" src="Engine/Source/StorageManagerLocalStorage.js"></script>
 <script type="text/javascript" src="Engine/Source/StorageManagerMemory.js"></script>
+<script type="text/javascript" src="Engine/Source/TextSource.js"></script>
 <script type="text/javascript" src="Engine/Source/TimerManager.js"></script>
 <script type="text/javascript" src="Engine/Source/Universe.js"></script>
 <script type="text/javascript" src="Engine/Source/World.js"></script>
